--- a/GitWatch/RepositoryCell.xib
+++ b/GitWatch/RepositoryCell.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -48,7 +47,7 @@
                         </constraints>
                         <state key="normal" title="check"/>
                         <connections>
-                            <action selector="checkboxSelected:" destination="J1p-Uv-Hk3" eventType="touchUpInside" id="wqc-jt-y5o"/>
+                            <action selector="checkboxClick:" destination="J1p-Uv-Hk3" eventType="touchUpInside" id="Inf-Wb-eV9"/>
                         </connections>
                     </button>
                 </subviews>
@@ -95,7 +94,7 @@
                 <outlet property="repositoryImage" destination="hmr-LJ-OAo" id="NCn-vA-eug"/>
                 <outlet property="repositoryName" destination="5xP-Aa-gwq" id="FwS-BA-JbX"/>
             </connections>
-            <point key="canvasLocation" x="395" y="276"/>
+            <point key="canvasLocation" x="177" y="338"/>
         </tableViewCell>
     </objects>
     <resources>
